# savanna-tech-azure-drift-detector

./: .dockerignore  .env  .env_example  .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  azure_poller.py  data_flow_diagram.txt  docker-compose.yml  drift_detector.py  entity_relationship_diagram.txt  main.py  migrations.py  models.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  run_tests.py  swagger.py  system_design_document.txt  test_report.txt
.github/workflows/: ci-cd.yml
docs/: drift_detection.md  security.md
docs/architecture/: multi-tenancy.md  system-overview.md
instance/: app.db
migrations/versions/: 4470ef8215bb_add_settings_table.py
scripts/: run_celery.py  run_celery_beat.py
src/api/: api.py  routes.py
src/api/routes/: __init__.py  dashboard.py  export.py  reports.py  settings.py  users.py
src/auth/: auth.py
src/core/: app.py  celery_app.py  config.py  migrations.py  models.py  mongodb.py  mongodb_ops.py  utils.py
src/drift/: azure_poller.py  drift_detector.py  tasks.py
src/drift/pollers/: __init__.py  base.py  keyvault_poller.py  nsg_poller.py  storage_poller.py  vm_poller.py
static/: swagger.json
static/css/: custom.css
static/js/: charts.js  dashboard.js
templates/: base.html  dashboard.html  login.html  profile.html  reports.html  settings.html  users.html
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_drift_detector.py  test_models.py  test_routes.py
