[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "authlib>=1.5.2",
    "msal>=1.32.3",
    "deepdiff>=8.5.0",
    "apscheduler>=3.11.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "pytest>=8.3.5",
    "flask-swagger-ui>=5.21.0",
    "flask-dance>=7.1.0",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
]
